# chaos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blankConfig.json  install.sh  installPlays.sh  raw_gadget_timeout.patch  start.sh  startPlays.sh
chaosface/: setup.cfg  setup.py
chaosface/src/: __main__.py
chaosface/src/chaosface/: __main__.py  chaosActiveView.py  chaosConfigurationView.py  chaosPausedView.py  chaosRelay.py  chaosSettingsView.py  chaosVoteTimerView.py  chaosVoteView.py  chatbot.py  colorprogressbar.py
cmake/Modules/: CPackDeb.cmake  CodeCoverage.cmake  FindGlew.cmake  FindLibAssimp.cmake  FindLibCryptopp.cmake  FindLibFtdi.cmake  FindLibJsoncpp.cmake  FindLibMbsimulation.cmake  FindLibMogi.cmake  FindLibOptitrack.cmake  FindLibPng.cmake  FindLibPortmidi.cmake  FindLibSdl.cmake  FindLibSdl2.cmake  FindLibSixaxis.cmake  FindLibusb1.cmake  FindOpenCV.cmake  FindOpenGLES.cmake  MogiLibrary.cmake  OpenCVConfig.cmake
docs/: streamSetup.md
docs/TLOU2/: README.md
examples/: CMakeLists.txt
examples/HZD/: CMakeLists.txt  main.cpp
examples/TLOU2/: CMakeLists.txt
examples/TLOU2/include/: menuing.h
examples/TLOU2/src/: main.cpp  menuing.cpp
examples/TwitchPlays/: CMakeLists.txt
examples/TwitchPlays/src/: main.cpp
games/: CMakeLists.txt
games/HZD/: CMakeLists.txt
games/TLOU2/: CMakeLists.txt
games/TLOU2/include/: gamemenu.h  menuing.h  menus.toml
games/TLOU2/src/: main.cpp  menuing.cpp  menumodifier.cpp
include/: chaos-uhid.h  chaos.h  controller-state.h  controller.h  device.h  deviceTypes.h  interface.h  magicpro-generated.h  menumodifier.h  modifier.h  ps4-generated.h  ps5-generated.h  sequence.h
python/: Analysis.ipynb  analyze-Copy1.py  analyze.py  chaosConfigurationView.py  chaosConnectionView.py  chaosPausedView.py  chaosRelay.py  chaosSettingsView.py  chaosVoteTimerView.py  chaoscommunicator.py  chatbot.py  irctwitch.py  main.py  twitchPlays.py  utility.py  zmq_client.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
python/testing/: zmq_client.py  zmq_server.py
scripts/: chaos.service  chaosface.service  install.sh  installPlays.sh  nsgamepad_usb  plays.service  playsface.service
src/: chaos-uhid.cpp  chaosEngine.cpp  command-listener.cpp  command-sender.cpp  controller-gpio.cpp  controller-raw.cpp  controller-state-dualsense.cpp  controller-state-dualshock.cpp  controller-state.cpp  controller.cpp  device.cpp  deviceRaw.cpp  gadget.c  interface.cpp  joystick copy.cpp  joystick.cpp  main.cpp  menuing.cpp  modifier.cpp  mouse.cpp  passthroughHID.cpp  sequence-absolute.cpp  sequence-relative.cpp  sequence.cpp  zmq_client.cpp  zmq_server.cpp
testing/: joystick copy.cpp
