[metadata]
name = chaosface
version = 1.0.0
author = blegas78
url = https://github.com/blegas78/chaos
description = Browser interface for Twitch Controls Chaos
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL 3.0
license_file = LICENSE
platform = Linux
project_urls =
    Bug Tracker = https://github.com/blegas78/chaos/issues

[options]
zip_safe = False
python_requires = >= 3.6
package_dir =
  =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    chaosface = chaosface:startup
    
